create jwt && format strings

--- a/language/app.en.toml
+++ b/language/app.en.toml
@@ -4,12 +4,12 @@ HelloPerson = "Hello {{.Name}}"
 description = "{{.Key}} is not allowed empty!"
 
 [TokenValidationError]
-other = "That's not even a token"
+other = "Request is illegal, please quit retry"
 [TokenValidationErrorExpired]
-other = "Token is expired"
+other = "Login status has expired, please log in again"
 [TokenValidationErrorNotValidYet]
-other = "Token not active yet"
+other = "Request is illegal, please quit retry"
 [TokenHandleError]
-other = "Couldn't handle this token"
+other = "Request is illegal, please quit retry"
 [TokenEmptyError]
-other = "请求未携带token，无权限访问"
+other = "No access"
